Added Hibernate,Spring-JPA,HSQL dependency

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+This index.html will not be displayed. The dispatcher servlet handles *.html requests and forwards the request to IndexController Handler which in-turn forwards the request to tiles View Resolver
 </body>
 </html>
